fix: aside left: 0 to align with page left edge

--- a/components/BreedTree/BreedTree.module.css
+++ b/components/BreedTree/BreedTree.module.css
@@ -23,7 +23,7 @@
 
 .aside {
   position: absolute;
-  left: 420px;
+  left: 0px;
   top: -120px;
   width: 34%;
   max-width: 460px;
